--- a/app/design/frontend/enterprise/default/template/customer/form/changepassword.phtml
+++ b/app/design/frontend/enterprise/default/template/customer/form/changepassword.phtml
@@ -40,13 +40,13 @@
             <div class="field">
                 <label for="password" class="required"><em>*</em><?php echo $this->__('New Password') ?></label>
                 <div class="input-box">
-                    <input type="password" class="input-text required-entry validate-password" name="password" id="password" />
+                    <input type="password" class="input-text required-entry validate-both-passwords validate-password" name="password" id="password" />
                 </div>
             </div>
             <div class="field">
                 <label for="confirmation" class="required"><em>*</em><?php echo $this->__('Confirm New Password') ?></label>
                 <div class="input-box">
-                    <input type="password" class="input-text required-entry validate-cpassword" name="confirmation" id="confirmation" />
+                    <input type="password" class="input-text required-entry validate-both-passwords" name="confirmation" id="confirmation" />
                 </div>
             </div>
         </li>
