--- a/app/design/frontend/enterprise/default/template/customer/form/edit.phtml
+++ b/app/design/frontend/enterprise/default/template/customer/form/edit.phtml
@@ -85,13 +85,13 @@
             <div class="field">
                 <label for="password"><?php echo $this->__('New Password') ?></label>
                 <div class="input-box">
-                    <input type="password" class="input-text validate-password" name="password" id="password" />
+                    <input type="password" class="input-text validate-both-passwords validate-password" name="password" id="password" />
                 </div>
             </div>
             <div class="field">
                 <label for="confirmation"><?php echo $this->__('Confirm New Password') ?></label>
                 <div class="input-box">
-                    <input type="password" class="input-text validate-cpassword" name="confirmation" id="confirmation" />
+                    <input type="password" class="input-text validate-both-passwords" name="confirmation" id="confirmation" />
                 </div>
             </div>
         </li>
