--- a/app/design/frontend/enterprise/default/template/sendfriend/send.phtml
+++ b/app/design/frontend/enterprise/default/template/sendfriend/send.phtml
@@ -123,7 +123,7 @@
                 <?php endif; ?>
             </span>&nbsp;
         </p>
-        <button type="submit" class="button<?php if (!$this->canSend()):?> disabled<?php endif ?>"<?php if (!$this->canSend()):?> disabled="disabled"<?php endif ?>><span><span><?php echo $this->__('Send email') ?></span></span></button>
+        <button type="submit" class="button<?php if (!$this->canSend()):?> disabled<?php endif ?>"<?php if (!$this->canSend()):?> disabled="disabled"<?php endif ?>><span><span><?php echo $this->__('Send Email') ?></span></span></button>
         <?php if (1 < $this->getMaxRecipients()): ?>
             <button type="button" id="add_recipient_button" onclick="add_recipient();" class="button"><span><span><?php echo $this->__('Add Recipient') ?></span></span></button>
         <?php endif; ?>
