--- a/app/design/frontend/base/default/layout/facebook.xml
+++ b/app/design/frontend/base/default/layout/facebook.xml
@@ -53,7 +53,7 @@ Product view
         </reference>
     </review_product_list>
 
-    <facebook_index_page translate="label">
+    <social_facebook_index_page translate="label">
         <block type="social_facebook/head" name="social_facebook_head" template="social/facebook/page.phtml" />
-    </facebook_index_page>
+    </social_facebook_index_page>
 </layout>
