--- a/app/code/core/Mage/Adminhtml/view/adminhtml/sales/order/view/info.phtml
+++ b/app/code/core/Mage/Adminhtml/view/adminhtml/sales/order/view/info.phtml
@@ -138,7 +138,7 @@ $orderStoreDate = $this->formatDate($_order->getCreatedAtStoreDate(), 'medium', 
             <div class="tools"><?php echo $this->getAddressEditLink($_order->getBillingAddress())?></div>
         </div>
         <fieldset>
-            <address><?php echo $_order->getBillingAddress()->getFormated(true) ?></address>
+            <address><?php echo $_order->getBillingAddress()->format('html') ?></address>
         </fieldset>
     </div>
 </div>
@@ -151,7 +151,7 @@ $orderStoreDate = $this->formatDate($_order->getCreatedAtStoreDate(), 'medium', 
             <div class="tools"><?php echo $this->getAddressEditLink($_order->getShippingAddress())?></div>
         </div>
         <fieldset>
-            <address><?php echo $_order->getShippingAddress()->getFormated(true) ?></address>
+            <address><?php echo $_order->getShippingAddress()->format('html') ?></address>
         </fieldset>
     </div>
 </div>
