--- a/app/code/core/Mage/OAuth/view/adminhtml/authorize/head-simple.phtml
+++ b/app/code/core/Mage/OAuth/view/adminhtml/authorize/head-simple.phtml
@@ -9,7 +9,7 @@
 /**
  * Head block OAuth simple pages
  *
- * @var $this Mage_Page_Block_Html_Head
+ * @var $this Mage_Adminhtml_Block_Page_Head
  */
 
 //Code partially copied from adminhtml/default/default/template/page/head.phtml
@@ -29,4 +29,4 @@
 //]]>
 </script>
 
-<?php echo $this->getChildHtml() ?>
+<?php echo $this->getCssJsHtml() ?>
