--- a/app/code/core/Mage/Oauth/view/adminhtml/empty.phtml
+++ b/app/code/core/Mage/Oauth/view/adminhtml/empty.phtml
@@ -27,7 +27,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="<?php echo $this->getLang() ?>" lang="<?php echo $this->getLang() ?>">
 <head>
-<?php $this->getChild('head')->unsetChildren(); ?>
+<?php $this->getChildBlock('head')->unsetChildren(); ?>
 <?php echo $this->getChildHtml('head'); ?>
 </head>
 <body class="page-popup<?php echo $this->getBodyClass()?$this->getBodyClass() : ''?>">
