--- a/app/design/frontend/enterprise/iphone/Mage_Catalog/product/view.phtml
+++ b/app/design/frontend/enterprise/iphone/Mage_Catalog/product/view.phtml
@@ -46,8 +46,8 @@
                         <?php endif; ?>
                     </div>
                 </div>
-                <?php if ($_product->isSaleable() && $this->hasOptions() && $this->getChildChildHtml('container1')):?>
-                    <?php echo $this->getChildChildHtml('container1', '', true, true) ?>
+                <?php if ($_product->isSaleable() && $this->hasOptions()):?>
+                    <?php echo $this->getChildChildHtml('container1') ?>
                 <?php endif;?>
                 <?php if (!$this->hasOptions() && $_product->getTypeId() != Mage_Catalog_Model_Product_Type_Grouped::TYPE_CODE) :?>
                     <?php echo $this->getChildHtml('addto') ?>
@@ -81,7 +81,7 @@
             </div>
             <?php echo $this->getChildHtml('giftcard_form'); ?>
             <?php if ($_product->isSaleable() && $this->hasOptions()):?>
-                <?php echo $this->getChildChildHtml('container2', '', true, true) ?>
+                <?php echo $this->getChildChildHtml('container2') ?>
             <?php endif;?>
         </form>
     </div>
