--- a/app/code/core/Mage/Oauth/view/adminhtml/authorize/head-simple.phtml
+++ b/app/code/core/Mage/Oauth/view/adminhtml/authorize/head-simple.phtml
@@ -9,7 +9,7 @@
  */
 
 /**
- * Head block OAuth simple pages
+ * Head block Oauth simple pages
  *
  * @var $this Mage_Adminhtml_Block_Page_Head
  */
