--- a/app/design/frontend/default/iphone/template/downloadable/sales/order/items/renderer/downloadable.phtml
+++ b/app/design/frontend/default/iphone/template/downloadable/sales/order/items/renderer/downloadable.phtml
@@ -26,12 +26,13 @@
 ?>
 <?php
     $_item = $this->getItem();
+    $_options = $this->getItemOptions();
     $links = $this->getLinks();
 ?>
 <tr class="border" id="order-item-row-<?php echo $_item->getId() ?>">
     <th><?php echo $this->__('Product Name') ?></th>
     <td><h3 class="product-name"><?php echo $this->escapeHtml($_item->getName()) ?></h3>
-        <?php if($_options = $this->getItemOptions()): ?>
+        <?php if($_options): ?>
         <dl class="item-options">
         <?php foreach ($_options as $_option) : ?>
             <dt><?php echo $this->escapeHtml($_option['label']) ?></dt>
@@ -328,9 +329,6 @@
                         </span>
                     <?php endif; ?>
                 <?php endif; ?>
-
-
-
             </span>
         <?php endif; ?>
     </td>
