--- a/app/code/core/Mage/ImportExport/view/adminhtml/import/form/before.phtml
+++ b/app/code/core/Mage/ImportExport/view/adminhtml/import/form/before.phtml
@@ -17,6 +17,96 @@
      */
     varienForm.prototype.ifrElemName = 'import_post_target_frame';
 
+
+    /**
+     * Handle value change in entity type selector
+     *
+     * @return void
+     */
+    varienForm.prototype.handleEntityTypeSelector = function()
+    {
+        if ($('entity') && $F('entity')) {
+            $('head-import_format_version_fieldset').hide();
+            $('import_format_version_fieldset').hide();
+            $('file_format_version').selectedIndex = 0;
+            this.showAllBehaviours();
+
+            switch ($F('entity')) {
+                case 'customer':
+                    $('head-import_format_version_fieldset').show();
+                    $('import_format_version_fieldset').show();
+                    break;
+                default:
+                    break;
+            }
+        } else {
+            $('head-export_format_version_fieldset').hide();
+            $('export_format_version_fieldset').hide();
+            $('file_format_version').selectedIndex = 0;
+            this.showAllBehaviours();
+        }
+    };
+
+    /**
+     * Handle value change in import format version selector
+     *
+     * @return void
+     */
+    varienForm.prototype.handleImportFormatVersionSelector = function()
+    {
+        if ($('file_format_version') && $F('file_format_version')) {
+            var allowedBehaviours = [];
+            <?php
+                $importVersion = array(
+                    1 => Mage_ImportExport_Model_Source_Import_Format_Version::IMPORT_VERSION_1,
+                    2 => Mage_ImportExport_Model_Source_Import_Format_Version::IMPORT_VERSION_2,
+                );
+            ?>
+            switch ($F('file_format_version')) {
+                case '<?php echo $importVersion[1] ?>':
+                    allowedBehaviours = <?php echo $this->getJsAllowedCustomerBehaviours($importVersion[1]) ?>;
+                    break;
+                case '<?php echo $importVersion[2] ?>':
+                    allowedBehaviours = <?php echo $this->getJsAllowedCustomerBehaviours($importVersion[2]) ?>;
+                    break;
+                default:
+                    break;
+            }
+
+            // hide not allowed behaviours
+            if ($('behavior') && $F('behavior')) {
+                var behaviourLength = $('behavior').length;
+                var behaviourOptions = $('behavior').options;
+                for (var i = 0; i < behaviourLength; i++) {
+                    if (allowedBehaviours.include(behaviourOptions[i].value)) {
+                        behaviourOptions[i].show();
+                    } else {
+                        behaviourOptions[i].hide();
+                        if (behaviourOptions[i].selected) {
+                            $('behavior').selectedIndex = 0;
+                        }
+                    }
+                }
+            }
+        }
+    };
+
+    /**
+     * Show all available behaviours
+     *
+     * @return void
+     */
+    varienForm.prototype.showAllBehaviours = function()
+    {
+        if ($('behavior') && $F('behavior')) {
+            var behaviourLength = $('behavior').length;
+            var behaviourOptions = $('behavior').options;
+            for (var i = 0; i < behaviourLength; i++) {
+                behaviourOptions[i].show();
+            }
+        }
+    };
+
     /**
      * Post form data to dynamic iframe.
      *
