--- a/app/code/core/Mage/ImportExport/view/adminhtml/import/form/before.phtml
+++ b/app/code/core/Mage/ImportExport/view/adminhtml/import/form/before.phtml
@@ -17,7 +17,6 @@
      */
     varienForm.prototype.ifrElemName = 'import_post_target_frame';
 
-
     /**
      * Handle value change in entity type selector
      *
@@ -29,6 +28,9 @@
             $('head-import_format_version_fieldset').hide();
             $('import_format_version_fieldset').hide();
             $('file_format_version').selectedIndex = 0;
+            $('head-customer_entity_fieldset').hide();
+            $('customer_entity_fieldset').hide();
+            $('customer_entity').selectedIndex = 0;
             this.showAllBehaviours();
 
             switch ($F('entity')) {
@@ -43,6 +45,9 @@
             $('head-export_format_version_fieldset').hide();
             $('export_format_version_fieldset').hide();
             $('file_format_version').selectedIndex = 0;
+            $('head-customer_entity_fieldset').hide();
+            $('customer_entity_fieldset').hide();
+            $('customer_entity').selectedIndex = 0;
             this.showAllBehaviours();
         }
     };
@@ -64,9 +69,14 @@
             ?>
             switch ($F('file_format_version')) {
                 case '<?php echo $importVersion[1] ?>':
+                    $('head-customer_entity_fieldset').hide();
+                    $('customer_entity_fieldset').hide();
+                    $('customer_entity').selectedIndex = 0;
                     allowedBehaviours = <?php echo $this->getJsAllowedCustomerBehaviours($importVersion[1]) ?>;
                     break;
                 case '<?php echo $importVersion[2] ?>':
+                    $('head-customer_entity_fieldset').show();
+                    $('customer_entity_fieldset').show();
                     allowedBehaviours = <?php echo $this->getJsAllowedCustomerBehaviours($importVersion[2]) ?>;
                     break;
                 default:
@@ -88,6 +98,10 @@
                     }
                 }
             }
+        } else {
+            $('head-customer_entity_fieldset').hide();
+            $('customer_entity_fieldset').hide();
+            $('customer_entity').selectedIndex = 0;
         }
     };
 
