--- a/app/code/core/Mage/ImportExport/view/adminhtml/import/form/after.phtml
+++ b/app/code/core/Mage/ImportExport/view/adminhtml/import/form/after.phtml
@@ -14,3 +14,11 @@
     </div>
     <div id="import_validation_messages" class="fieldset "><!-- --></div>
 </div>
+<script type="text/javascript">
+//<![CDATA[
+    $('entity').selectedIndex = 0; // forced resetting entity selector after page refresh
+    $('behavior').selectedIndex = 0; // forced resetting behavior selector after page refresh
+    $('file_format_version').selectedIndex = 0; // forced resetting file format version selector after page refresh
+    $('customer_entity').selectedIndex = 0; // forced resetting customer entity selector after page refresh
+//]]>
+</script>
