--- a/app/code/core/Mage/ImportExport/view/adminhtml/import/form/before.phtml
+++ b/app/code/core/Mage/ImportExport/view/adminhtml/import/form/before.phtml
@@ -28,6 +28,9 @@
             $('head-import_format_version_fieldset').hide();
             $('import_format_version_fieldset').hide();
             $('file_format_version').selectedIndex = 0;
+            $('head-customer_entity_fieldset').hide();
+            $('customer_entity_fieldset').hide();
+            $('customer_entity').selectedIndex = 0;
             $('head-upload_file_fieldset').hide();
             $('upload_file_fieldset').hide();
             this.showAllBehaviours();
@@ -48,6 +51,9 @@
             $('head-import_format_version_fieldset').hide();
             $('import_format_version_fieldset').hide();
             $('file_format_version').selectedIndex = 0;
+            $('head-customer_entity_fieldset').hide();
+            $('customer_entity_fieldset').hide();
+            $('customer_entity').selectedIndex = 0;
             $('head-upload_file_fieldset').hide();
             $('upload_file_fieldset').hide();
             this.showAllBehaviours();
@@ -71,9 +77,14 @@
             ?>
             switch ($F('file_format_version')) {
                 case '<?php echo $importVersion[1] ?>':
+                    $('head-customer_entity_fieldset').hide();
+                    $('customer_entity_fieldset').hide();
+                    $('customer_entity').selectedIndex = 0;
                     allowedBehaviours = <?php echo $this->getJsAllowedCustomerBehaviours($importVersion[1]) ?>;
                     break;
                 case '<?php echo $importVersion[2] ?>':
+                    $('head-customer_entity_fieldset').show();
+                    $('customer_entity_fieldset').show();
                     allowedBehaviours = <?php echo $this->getJsAllowedCustomerBehaviours($importVersion[2]) ?>;
                     break;
                 default:
@@ -100,6 +111,9 @@
             $('head-upload_file_fieldset').show();
             $('upload_file_fieldset').show();
         } else {
+            $('head-customer_entity_fieldset').hide();
+            $('customer_entity_fieldset').hide();
+            $('customer_entity').selectedIndex = 0;
             $('head-upload_file_fieldset').hide();
             $('upload_file_fieldset').hide();
         }
