--- a/app/code/core/Mage/ImportExport/view/adminhtml/import/form/before.phtml
+++ b/app/code/core/Mage/ImportExport/view/adminhtml/import/form/before.phtml
@@ -30,6 +30,7 @@
             $('file_format_version').selectedIndex = 0;
             $('head-customer_entity_fieldset').hide();
             $('customer_entity_fieldset').hide();
+            $('customer_entity').disable();
             $('customer_entity').selectedIndex = 0;
             $('head-upload_file_fieldset').hide();
             $('upload_file_fieldset').hide();
@@ -53,6 +54,7 @@
             $('file_format_version').selectedIndex = 0;
             $('head-customer_entity_fieldset').hide();
             $('customer_entity_fieldset').hide();
+            $('customer_entity').disable();
             $('customer_entity').selectedIndex = 0;
             $('head-upload_file_fieldset').hide();
             $('upload_file_fieldset').hide();
@@ -79,12 +81,14 @@
                 case '<?php echo $importVersion[1] ?>':
                     $('head-customer_entity_fieldset').hide();
                     $('customer_entity_fieldset').hide();
+                    $('customer_entity').disable();
                     $('customer_entity').selectedIndex = 0;
                     allowedBehaviours = <?php echo $this->getJsAllowedCustomerBehaviours($importVersion[1]) ?>;
                     break;
                 case '<?php echo $importVersion[2] ?>':
                     $('head-customer_entity_fieldset').show();
                     $('customer_entity_fieldset').show();
+                    $('customer_entity').enable();
                     allowedBehaviours = <?php echo $this->getJsAllowedCustomerBehaviours($importVersion[2]) ?>;
                     break;
                 default:
@@ -113,6 +117,7 @@
         } else {
             $('head-customer_entity_fieldset').hide();
             $('customer_entity_fieldset').hide();
+            $('customer_entity').disable();
             $('customer_entity').selectedIndex = 0;
             $('head-upload_file_fieldset').hide();
             $('upload_file_fieldset').hide();
